client/src/pages/Profile/Profile.css
.profile-jumbo {
    background-color: #b7b1a8;
    background-size: 940px 400px;
    height: 300px;
    padding-left: 40px;
    text-align: left;
}

.color-box-row {
    margin-bottom: 35px;
}

.bottom-row {
    margin-bottom: 100px;
}

.users-name {
    font-size: 3em;
    margin-bottom: 45px;
}

.user-pic {
    float: right;
    border-radius: 100px;
    margin-right: 40px;
    width: 150px;
}

.logout-button {
    background: #eb6864;
    color: white;
    width: 90px;
    text-align: center;
    height: 43px;
    /* padding-top: 5px;
    padding-bottom: 5px; */
    border: none;
    /* margin-top: 5px; */
}

.color-scheme-button {
    background: #eb6864;
    width: 190px;
    text-align: center;
    padding-top: 7px;
    padding-bottom: 7px;
    color: white;
    margin-right: 15px;
}

.dropdown-menu {
    background-color: #eb6864;
    color: white;
    text-decoration: none;
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
    margin-right: 25px;
    margin-top: 0px !important;
    border-radius: 0px;
}

.dropdown-menu-style {
    background-color: #eb6864;
    color: white;
    text-decoration: none;
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
    margin-right: 25px;
    margin-top: 0px !important;
    border-radius: 0px;
}

.dropdown-menu-style>li>.a:hover {
    color: white;
}

.btn-group>.btn:first-child {
    margin-left: 0;
    margin-top: 0px;
}

.modal-css-1 {
    text-align: left;
}

